--- a/index.html
+++ b/index.html
@@ -23,75 +23,15 @@
                 <option value="4">user</option>
             </select>
         </div>
-        <div class="container h-100">
-            <div class="row row-cols-1 row-cols-md-5 row-cols-sm-2 flex-wrap justify-content-evenly align-content-center mt-4">
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-                <div class="col mt-5 text-center">
-                    <div class="icon_container">
-                        <span>icon image</span> <br>
-                        <span>ICON NAME</span>
-                    </div>
-                </div>
-            </div>
+
+
+        <div id="icon_section" class="container h-100 d-flex flex-wrap">
+
+            <!-- <div class="box m-3 text-center">
+                <span>icon image</span>
+                <span>ICON NAME</span>
+            </div> -->
+
         </div>
     </main>
     <script src="./js/data.js"></script>
