Milestone 3; Creata meccanica di stampa a seconda del valore selezionato dall'user;

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="ap_midcontainer d-flex align-items-center justify-content-center">
             <label for="select-type" class="p-2 text-light fs-5">FILTRA PER TIPO</label>
             <select id="select-type" class="form-select w-25" aria-label="Default select example">
-                <option value="1">All</option>
-                <option value="2">Animal</option>
-                <option value="3">vegetable</option>
-                <option value="4">user</option>
+                <option value="all">All</option>
+                <option value="animal">Animal</option>
+                <option value="vegetable">vegetable</option>
+                <option value="user">user</option>
             </select>
         </div>
 
