Rimossa altezza in percentuale al container che causava un eccessivo ingombro di spazio per gli elementi che andavano a capo;

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
 
-        <div id="icon_section" class="container h-100 d-flex flex-wrap">
+        <div id="icon_section" class="container d-flex flex-wrap">
 
             <!-- <div class="box m-3 text-center">
                 <span>icon image</span>
