--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="ap_midcontainer d-flex align-items-center justify-content-center">
             <label for="select-type" class="p-2 text-light fs-5">FILTRA PER TIPO</label>
             <select id="select-type" class="form-select w-25" aria-label="Default select example">
-                <option value="all">All</option>
+                <!-- <option value="all">All</option>
                 <option value="animal">Animal</option>
-                <option value="vegetable">vegetable</option>
-                <option value="user">user</option>
+                <option value="vegetable">Vegetable</option>
+                <option value="user">User</option> -->
             </select>
         </div>
 
